--- a/.yamato/universal-android-opengles3.yml
+++ b/.yamato/universal-android-opengles3.yml
@@ -48,7 +48,7 @@ Build_Universal_Android_OpenGLES3_Player_il2cpp_apiNet4_Linear_trunk:
                   set /p GIT_REVISIONDATE=<revdate.tmp
                   echo %GIT_REVISIONDATE%
                   del revdate.tmp
-                  utr --suite=playmode --platform=Android --testproject=./TestProjects/UniversalGraphicsTest --extra-editor-arg="-playergraphicsapi=OpenGLES3" --editor-location=./WindowsEditor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=IL2CPP --extra-editor-arg="-colorspace=Linear" --architecture=ARM64 --timeout=2700
+                  utr --suite=playmode --platform=Android --testproject=./TestProjects/UniversalGraphicsTest --extra-editor-arg="-playergraphicsapi=OpenGLES3" --editor-location=./WindowsEditor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=IL2CPP --extra-editor-arg="-colorspace=Linear" --architecture=ARM64 --timeout=3600
     artifacts:
         logs:
             paths:
@@ -57,6 +57,32 @@ Build_Universal_Android_OpenGLES3_Player_il2cpp_apiNet4_Linear_trunk:
         players:
             paths:
               -  "players/**"
+Universal_Android_OpenGLES3_Standalone_XR_il2cpp_apiNet4_Linear_trunk:
+    name: Universal on Android_OpenGLES3_Standalone_XR_il2cpp_apiNet4_Linear on version trunk
+    agent:
+        type: Unity::mobile::android
+        image: mobile/android-execution-r19:stable
+        flavor: b1.large
+    variables:
+        UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
+    commands:
+      -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr.bat --output utr.bat
+      -  '%ANDROID_SDK_ROOT%\platform-tools\adb.exe connect %BOKKEN_DEVICE_IP%'
+      -  powershell %ANDROID_SDK_ROOT%\platform-tools\adb.exe devices
+      -  NetSh Advfirewall set allprofiles state off
+      -  |5-
+
+                 set ANDROID_DEVICE_CONNECTION=%BOKKEN_DEVICE_IP%
+                 utr --suite=playmode --platform=Android --artifacts_path=test-results --player-load-path=players --scripting-backend=IL2CPP --extra-editor-arg="-colorspace=Linear" --reruncount=2 --extra-editor-arg="-xr-reuse-tests" --architecture=ARM64 --editor-location=WindowsEditor --timeout=1200
+      -  start %ANDROID_SDK_ROOT%\platform-tools\adb.exe kill-server
+    artifacts:
+        logs:
+            paths:
+              -  "**/test-results/**"
+              -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+    dependencies:
+      -  path: .yamato/universal-android-opengles3.yml#Build_Universal_Android_OpenGLES3_Player_il2cpp_apiNet4_Linear_trunk
+         rerun: on-new-revision
 Universal_Android_OpenGLES3_Standalone_mono_apiNet2_Linear_trunk:
     name: Universal on Android_OpenGLES3_Standalone_mono_apiNet2_Linear on version trunk
     agent:
@@ -102,7 +128,7 @@ Build_Universal_Android_OpenGLES3_Player_mono_apiNet2_Linear_trunk:
                   set /p GIT_REVISIONDATE=<revdate.tmp
                   echo %GIT_REVISIONDATE%
                   del revdate.tmp
-                  utr --suite=playmode --platform=Android --testproject=./TestProjects/UniversalGraphicsTest --extra-editor-arg="-playergraphicsapi=OpenGLES3" --editor-location=./WindowsEditor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=Mono2x --extra-editor-arg="-colorspace=Linear" --architecture=ARM64 --timeout=2700
+                  utr --suite=playmode --platform=Android --testproject=./TestProjects/UniversalGraphicsTest --extra-editor-arg="-playergraphicsapi=OpenGLES3" --editor-location=./WindowsEditor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=Mono2x --extra-editor-arg="-colorspace=Linear" --architecture=ARM64 --timeout=3600
     artifacts:
         logs:
             paths:
@@ -111,6 +137,32 @@ Build_Universal_Android_OpenGLES3_Player_mono_apiNet2_Linear_trunk:
         players:
             paths:
               -  "players/**"
+Universal_Android_OpenGLES3_Standalone_XR_mono_apiNet2_Linear_trunk:
+    name: Universal on Android_OpenGLES3_Standalone_XR_mono_apiNet2_Linear on version trunk
+    agent:
+        type: Unity::mobile::android
+        image: mobile/android-execution-r19:stable
+        flavor: b1.large
+    variables:
+        UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
+    commands:
+      -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr.bat --output utr.bat
+      -  '%ANDROID_SDK_ROOT%\platform-tools\adb.exe connect %BOKKEN_DEVICE_IP%'
+      -  powershell %ANDROID_SDK_ROOT%\platform-tools\adb.exe devices
+      -  NetSh Advfirewall set allprofiles state off
+      -  |5-
+
+                 set ANDROID_DEVICE_CONNECTION=%BOKKEN_DEVICE_IP%
+                 utr --suite=playmode --platform=Android --artifacts_path=test-results --player-load-path=players --scripting-backend=Mono2x --extra-editor-arg="-colorspace=Linear" --reruncount=2 --extra-editor-arg="-xr-reuse-tests" --architecture=ARM64 --editor-location=WindowsEditor --timeout=1200
+      -  start %ANDROID_SDK_ROOT%\platform-tools\adb.exe kill-server
+    artifacts:
+        logs:
+            paths:
+              -  "**/test-results/**"
+              -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+    dependencies:
+      -  path: .yamato/universal-android-opengles3.yml#Build_Universal_Android_OpenGLES3_Player_mono_apiNet2_Linear_trunk
+         rerun: on-new-revision
 Universal_Android_OpenGLES3_Standalone_il2cpp_apiNet4_Linear_CUSTOM-REVISION:
     name: Universal on Android_OpenGLES3_Standalone_il2cpp_apiNet4_Linear on version CUSTOM-REVISION
     agent:
@@ -160,7 +212,7 @@ Build_Universal_Android_OpenGLES3_Player_il2cpp_apiNet4_Linear_CUSTOM-REVISION:
                   set /p GIT_REVISIONDATE=<revdate.tmp
                   echo %GIT_REVISIONDATE%
                   del revdate.tmp
-                  utr --suite=playmode --platform=Android --testproject=./TestProjects/UniversalGraphicsTest --extra-editor-arg="-playergraphicsapi=OpenGLES3" --editor-location=./WindowsEditor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=IL2CPP --extra-editor-arg="-colorspace=Linear" --architecture=ARM64 --timeout=2700
+                  utr --suite=playmode --platform=Android --testproject=./TestProjects/UniversalGraphicsTest --extra-editor-arg="-playergraphicsapi=OpenGLES3" --editor-location=./WindowsEditor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=IL2CPP --extra-editor-arg="-colorspace=Linear" --architecture=ARM64 --timeout=3600
     artifacts:
         logs:
             paths:
@@ -171,6 +223,35 @@ Build_Universal_Android_OpenGLES3_Player_il2cpp_apiNet4_Linear_CUSTOM-REVISION:
               -  "players/**"
     dependencies:
       -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:android
+         rerun: always
+Universal_Android_OpenGLES3_Standalone_XR_il2cpp_apiNet4_Linear_CUSTOM-REVISION:
+    name: Universal on Android_OpenGLES3_Standalone_XR_il2cpp_apiNet4_Linear on version CUSTOM-REVISION
+    agent:
+        type: Unity::mobile::android
+        image: mobile/android-execution-r19:stable
+        flavor: b1.large
+    variables:
+        UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
+        CUSTOM_REVISION: custom_revision_not_set
+    commands:
+      -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr.bat --output utr.bat
+      -  '%ANDROID_SDK_ROOT%\platform-tools\adb.exe connect %BOKKEN_DEVICE_IP%'
+      -  powershell %ANDROID_SDK_ROOT%\platform-tools\adb.exe devices
+      -  NetSh Advfirewall set allprofiles state off
+      -  |5-
+
+                 set ANDROID_DEVICE_CONNECTION=%BOKKEN_DEVICE_IP%
+                 utr --suite=playmode --platform=Android --artifacts_path=test-results --player-load-path=players --scripting-backend=IL2CPP --extra-editor-arg="-colorspace=Linear" --reruncount=2 --extra-editor-arg="-xr-reuse-tests" --architecture=ARM64 --editor-location=WindowsEditor --timeout=1200
+      -  start %ANDROID_SDK_ROOT%\platform-tools\adb.exe kill-server
+    artifacts:
+        logs:
+            paths:
+              -  "**/test-results/**"
+              -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+    dependencies:
+      -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:android
+         rerun: always
+      -  path: .yamato/universal-android-opengles3.yml#Build_Universal_Android_OpenGLES3_Player_il2cpp_apiNet4_Linear_CUSTOM-REVISION
          rerun: always
 Universal_Android_OpenGLES3_Standalone_mono_apiNet2_Linear_CUSTOM-REVISION:
     name: Universal on Android_OpenGLES3_Standalone_mono_apiNet2_Linear on version CUSTOM-REVISION
@@ -221,7 +302,7 @@ Build_Universal_Android_OpenGLES3_Player_mono_apiNet2_Linear_CUSTOM-REVISION:
                   set /p GIT_REVISIONDATE=<revdate.tmp
                   echo %GIT_REVISIONDATE%
                   del revdate.tmp
-                  utr --suite=playmode --platform=Android --testproject=./TestProjects/UniversalGraphicsTest --extra-editor-arg="-playergraphicsapi=OpenGLES3" --editor-location=./WindowsEditor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=Mono2x --extra-editor-arg="-colorspace=Linear" --architecture=ARM64 --timeout=2700
+                  utr --suite=playmode --platform=Android --testproject=./TestProjects/UniversalGraphicsTest --extra-editor-arg="-playergraphicsapi=OpenGLES3" --editor-location=./WindowsEditor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=Mono2x --extra-editor-arg="-colorspace=Linear" --architecture=ARM64 --timeout=3600
     artifacts:
         logs:
             paths:
@@ -232,4 +313,33 @@ Build_Universal_Android_OpenGLES3_Player_mono_apiNet2_Linear_CUSTOM-REVISION:
               -  "players/**"
     dependencies:
       -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:android
+         rerun: always
+Universal_Android_OpenGLES3_Standalone_XR_mono_apiNet2_Linear_CUSTOM-REVISION:
+    name: Universal on Android_OpenGLES3_Standalone_XR_mono_apiNet2_Linear on version CUSTOM-REVISION
+    agent:
+        type: Unity::mobile::android
+        image: mobile/android-execution-r19:stable
+        flavor: b1.large
+    variables:
+        UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
+        CUSTOM_REVISION: custom_revision_not_set
+    commands:
+      -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr.bat --output utr.bat
+      -  '%ANDROID_SDK_ROOT%\platform-tools\adb.exe connect %BOKKEN_DEVICE_IP%'
+      -  powershell %ANDROID_SDK_ROOT%\platform-tools\adb.exe devices
+      -  NetSh Advfirewall set allprofiles state off
+      -  |5-
+
+                 set ANDROID_DEVICE_CONNECTION=%BOKKEN_DEVICE_IP%
+                 utr --suite=playmode --platform=Android --artifacts_path=test-results --player-load-path=players --scripting-backend=Mono2x --extra-editor-arg="-colorspace=Linear" --reruncount=2 --extra-editor-arg="-xr-reuse-tests" --architecture=ARM64 --editor-location=WindowsEditor --timeout=1200
+      -  start %ANDROID_SDK_ROOT%\platform-tools\adb.exe kill-server
+    artifacts:
+        logs:
+            paths:
+              -  "**/test-results/**"
+              -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+    dependencies:
+      -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:android
+         rerun: always
+      -  path: .yamato/universal-android-opengles3.yml#Build_Universal_Android_OpenGLES3_Player_mono_apiNet2_Linear_CUSTOM-REVISION
          rerun: always
