--- a/.yamato/universal-iphone-metal.yml
+++ b/.yamato/universal-iphone-metal.yml
@@ -36,7 +36,7 @@ Build_Universal_iPhone_Metal_Player_il2cpp_apiNet4_Linear_trunk:
       -  unity-downloader-cli -u 37c5ec4c3cb13853f9074c74cbac49a232178bd8 -c editor -c iOS   --wait --published-only
       -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output utr
       -  chmod +x ./utr
-      -  ./utr --suite=playmode --platform=iOS --testproject=TestProjects/UniversalGraphicsTest --extra-editor-arg="-playergraphicsapi=Metal" --editor-location=.Editor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=IL2CPP --extra-editor-arg="-colorspace=Linear" --timeout=1800
+      -  ./utr --suite=playmode --platform=iOS --testproject=TestProjects/UniversalGraphicsTest --extra-editor-arg="-playergraphicsapi=Metal" --editor-location=.Editor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=IL2CPP --extra-editor-arg="-colorspace=Linear" --timeout=1200
     artifacts:
         logs:
             paths:
@@ -45,6 +45,26 @@ Build_Universal_iPhone_Metal_Player_il2cpp_apiNet4_Linear_trunk:
         players:
             paths:
               -  "players/**"
+Universal_iPhone_Metal_Standalone_XR_il2cpp_apiNet4_Linear_trunk:
+    name: Universal on iPhone_Metal_Standalone_XR_il2cpp_apiNet4_Linear on version trunk
+    agent:
+        type: Unity::mobile::iPhone
+        image: mobile/macos-10.13-testing:stable
+        flavor: b1.medium
+    variables:
+        UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
+    commands:
+      -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output utr
+      -  chmod +x ./utr
+      -  ./utr --suite=playmode --platform=iOS --artifacts_path=test-results --player-load-path=players --scripting-backend=IL2CPP --extra-editor-arg="-colorspace=Linear" --reruncount=2 --extra-editor-arg="-xr-reuse-tests"
+    artifacts:
+        logs:
+            paths:
+              -  "**/test-results/**"
+              -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+    dependencies:
+      -  path: .yamato/universal-iphone-metal.yml#Build_Universal_iPhone_Metal_Player_il2cpp_apiNet4_Linear_trunk
+         rerun: on-new-revision
 Universal_iPhone_Metal_Standalone_mono_apiNet2_Linear_trunk:
     name: Universal on iPhone_Metal_Standalone_mono_apiNet2_Linear on version trunk
     agent:
@@ -78,7 +98,7 @@ Build_Universal_iPhone_Metal_Player_mono_apiNet2_Linear_trunk:
       -  unity-downloader-cli -u 37c5ec4c3cb13853f9074c74cbac49a232178bd8 -c editor -c iOS   --wait --published-only
       -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output utr
       -  chmod +x ./utr
-      -  ./utr --suite=playmode --platform=iOS --testproject=TestProjects/UniversalGraphicsTest --extra-editor-arg="-playergraphicsapi=Metal" --editor-location=.Editor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=Mono2x --extra-editor-arg="-colorspace=Linear" --timeout=1800
+      -  ./utr --suite=playmode --platform=iOS --testproject=TestProjects/UniversalGraphicsTest --extra-editor-arg="-playergraphicsapi=Metal" --editor-location=.Editor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=Mono2x --extra-editor-arg="-colorspace=Linear" --timeout=1200
     artifacts:
         logs:
             paths:
@@ -87,6 +107,26 @@ Build_Universal_iPhone_Metal_Player_mono_apiNet2_Linear_trunk:
         players:
             paths:
               -  "players/**"
+Universal_iPhone_Metal_Standalone_XR_mono_apiNet2_Linear_trunk:
+    name: Universal on iPhone_Metal_Standalone_XR_mono_apiNet2_Linear on version trunk
+    agent:
+        type: Unity::mobile::iPhone
+        image: mobile/macos-10.13-testing:stable
+        flavor: b1.medium
+    variables:
+        UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
+    commands:
+      -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output utr
+      -  chmod +x ./utr
+      -  ./utr --suite=playmode --platform=iOS --artifacts_path=test-results --player-load-path=players --scripting-backend=Mono2x --extra-editor-arg="-colorspace=Linear" --reruncount=2 --extra-editor-arg="-xr-reuse-tests"
+    artifacts:
+        logs:
+            paths:
+              -  "**/test-results/**"
+              -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+    dependencies:
+      -  path: .yamato/universal-iphone-metal.yml#Build_Universal_iPhone_Metal_Player_mono_apiNet2_Linear_trunk
+         rerun: on-new-revision
 Universal_iPhone_Metal_Standalone_il2cpp_apiNet4_Linear_CUSTOM-REVISION:
     name: Universal on iPhone_Metal_Standalone_il2cpp_apiNet4_Linear on version CUSTOM-REVISION
     agent:
@@ -124,7 +164,7 @@ Build_Universal_iPhone_Metal_Player_il2cpp_apiNet4_Linear_CUSTOM-REVISION:
       -  unity-downloader-cli --source-file unity_revision.txt -c editor -c iOS   --wait --published-only
       -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output utr
       -  chmod +x ./utr
-      -  ./utr --suite=playmode --platform=iOS --testproject=TestProjects/UniversalGraphicsTest --extra-editor-arg="-playergraphicsapi=Metal" --editor-location=.Editor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=IL2CPP --extra-editor-arg="-colorspace=Linear" --timeout=1800
+      -  ./utr --suite=playmode --platform=iOS --testproject=TestProjects/UniversalGraphicsTest --extra-editor-arg="-playergraphicsapi=Metal" --editor-location=.Editor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=IL2CPP --extra-editor-arg="-colorspace=Linear" --timeout=1200
     artifacts:
         logs:
             paths:
@@ -135,6 +175,29 @@ Build_Universal_iPhone_Metal_Player_il2cpp_apiNet4_Linear_CUSTOM-REVISION:
               -  "players/**"
     dependencies:
       -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:ios
+         rerun: always
+Universal_iPhone_Metal_Standalone_XR_il2cpp_apiNet4_Linear_CUSTOM-REVISION:
+    name: Universal on iPhone_Metal_Standalone_XR_il2cpp_apiNet4_Linear on version CUSTOM-REVISION
+    agent:
+        type: Unity::mobile::iPhone
+        image: mobile/macos-10.13-testing:stable
+        flavor: b1.medium
+    variables:
+        UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
+        CUSTOM_REVISION: custom_revision_not_set
+    commands:
+      -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output utr
+      -  chmod +x ./utr
+      -  ./utr --suite=playmode --platform=iOS --artifacts_path=test-results --player-load-path=players --scripting-backend=IL2CPP --extra-editor-arg="-colorspace=Linear" --reruncount=2 --extra-editor-arg="-xr-reuse-tests"
+    artifacts:
+        logs:
+            paths:
+              -  "**/test-results/**"
+              -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+    dependencies:
+      -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:ios
+         rerun: always
+      -  path: .yamato/universal-iphone-metal.yml#Build_Universal_iPhone_Metal_Player_il2cpp_apiNet4_Linear_CUSTOM-REVISION
          rerun: always
 Universal_iPhone_Metal_Standalone_mono_apiNet2_Linear_CUSTOM-REVISION:
     name: Universal on iPhone_Metal_Standalone_mono_apiNet2_Linear on version CUSTOM-REVISION
@@ -173,7 +236,7 @@ Build_Universal_iPhone_Metal_Player_mono_apiNet2_Linear_CUSTOM-REVISION:
       -  unity-downloader-cli --source-file unity_revision.txt -c editor -c iOS   --wait --published-only
       -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output utr
       -  chmod +x ./utr
-      -  ./utr --suite=playmode --platform=iOS --testproject=TestProjects/UniversalGraphicsTest --extra-editor-arg="-playergraphicsapi=Metal" --editor-location=.Editor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=Mono2x --extra-editor-arg="-colorspace=Linear" --timeout=1800
+      -  ./utr --suite=playmode --platform=iOS --testproject=TestProjects/UniversalGraphicsTest --extra-editor-arg="-playergraphicsapi=Metal" --editor-location=.Editor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=Mono2x --extra-editor-arg="-colorspace=Linear" --timeout=1200
     artifacts:
         logs:
             paths:
@@ -184,4 +247,27 @@ Build_Universal_iPhone_Metal_Player_mono_apiNet2_Linear_CUSTOM-REVISION:
               -  "players/**"
     dependencies:
       -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:ios
+         rerun: always
+Universal_iPhone_Metal_Standalone_XR_mono_apiNet2_Linear_CUSTOM-REVISION:
+    name: Universal on iPhone_Metal_Standalone_XR_mono_apiNet2_Linear on version CUSTOM-REVISION
+    agent:
+        type: Unity::mobile::iPhone
+        image: mobile/macos-10.13-testing:stable
+        flavor: b1.medium
+    variables:
+        UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
+        CUSTOM_REVISION: custom_revision_not_set
+    commands:
+      -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output utr
+      -  chmod +x ./utr
+      -  ./utr --suite=playmode --platform=iOS --artifacts_path=test-results --player-load-path=players --scripting-backend=Mono2x --extra-editor-arg="-colorspace=Linear" --reruncount=2 --extra-editor-arg="-xr-reuse-tests"
+    artifacts:
+        logs:
+            paths:
+              -  "**/test-results/**"
+              -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+    dependencies:
+      -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:ios
+         rerun: always
+      -  path: .yamato/universal-iphone-metal.yml#Build_Universal_iPhone_Metal_Player_mono_apiNet2_Linear_CUSTOM-REVISION
          rerun: always
