--- a/.yamato/universal-linux-openglcore.yml
+++ b/.yamato/universal-linux-openglcore.yml
@@ -43,6 +43,49 @@ Universal_Linux_OpenGLCore_editmode_il2cpp_apiNet4_Linear_trunk:
             paths:
               -  "**/test-results/**"
               -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+Universal_Linux_OpenGLCore_Standalone_XR_il2cpp_apiNet4_Linear_trunk:
+    name: Universal on Linux_OpenGLCore_Standalone_XR_il2cpp_apiNet4_Linear on version trunk
+    agent:
+        type: Unity::VM::GPU
+        image: cds-ops/ubuntu-18.04-base:stable
+        flavor: b1.large
+    variables:
+        UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
+    commands:
+      -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output TestProjects/UniversalGraphicsTest/utr
+      -  chmod +x TestProjects/UniversalGraphicsTest/utr
+      -  cd TestProjects/UniversalGraphicsTest && ./utr --suite=playmode --platform=StandaloneLinux64 --artifacts_path=test-results --player-load-path=../../players --player-connection-ip=auto --scripting-backend=IL2CPP --extra-editor-arg="-colorspace=Linear" --reruncount=2 --extra-editor-arg="-xr-reuse-tests" --timeout=1200
+    artifacts:
+        logs:
+            paths:
+              -  "**/test-results/**"
+              -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+    dependencies:
+      -  path: .yamato/universal-linux-openglcore.yml#Build_Universal_Linux_OpenGLCore_Player_il2cpp_apiNet4_Linear_trunk
+         rerun: on-new-revision
+Build_Universal_Linux_OpenGLCore_Player_il2cpp_apiNet4_Linear_trunk:
+    name: Build Universal on Linux_OpenGLCore_il2cpp_apiNet4_Linear_Player on version trunk
+    agent:
+        type: Unity::VM
+        image: cds-ops/ubuntu-18.04-base:stable
+        flavor: b1.xlarge
+    variables:
+        UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
+    commands:
+      -  sudo -H pip install --upgrade pip
+      -  sudo -H pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
+      -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output TestProjects/UniversalGraphicsTest/utr
+      -  chmod +x TestProjects/UniversalGraphicsTest/utr
+      -  cd TestProjects/UniversalGraphicsTest && sudo unity-downloader-cli -u 37c5ec4c3cb13853f9074c74cbac49a232178bd8 -c editor -c il2cpp  --wait --published-only
+      -  cd TestProjects/UniversalGraphicsTest && DISPLAY=:0.0 ./utr --suite=playmode --platform=StandaloneLinux64 --testproject=. --extra-editor-arg="-playergraphicsapi=OpenGLCore" --editor-location=.Editor --artifacts_path=test-results --player-save-path=../../players --build-only --scripting-backend=IL2CPP --extra-editor-arg="-colorspace=Linear" --extra-editor-arg="-executemethod" --timeout=1200 --extra-editor-arg="CustomBuild.BuildLinuxOpenGLCoreLinear"
+    artifacts:
+        logs:
+            paths:
+              -  "**/test-results/**"
+              -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+        players:
+            paths:
+              -  "players/**"
 Universal_Linux_OpenGLCore_playmode_mono_apiNet2_Linear_trunk:
     name: Universal on Linux_OpenGLCore_playmode_mono_apiNet2_Linear on version trunk
     agent:
@@ -83,6 +126,49 @@ Universal_Linux_OpenGLCore_editmode_mono_apiNet2_Linear_trunk:
             paths:
               -  "**/test-results/**"
               -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+Universal_Linux_OpenGLCore_Standalone_XR_mono_apiNet2_Linear_trunk:
+    name: Universal on Linux_OpenGLCore_Standalone_XR_mono_apiNet2_Linear on version trunk
+    agent:
+        type: Unity::VM::GPU
+        image: cds-ops/ubuntu-18.04-base:stable
+        flavor: b1.large
+    variables:
+        UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
+    commands:
+      -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output TestProjects/UniversalGraphicsTest/utr
+      -  chmod +x TestProjects/UniversalGraphicsTest/utr
+      -  cd TestProjects/UniversalGraphicsTest && ./utr --suite=playmode --platform=StandaloneLinux64 --artifacts_path=test-results --player-load-path=../../players --player-connection-ip=auto --scripting-backend=Mono2x --extra-editor-arg="-colorspace=Linear" --reruncount=2 --extra-editor-arg="-xr-reuse-tests" --timeout=1200
+    artifacts:
+        logs:
+            paths:
+              -  "**/test-results/**"
+              -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+    dependencies:
+      -  path: .yamato/universal-linux-openglcore.yml#Build_Universal_Linux_OpenGLCore_Player_mono_apiNet2_Linear_trunk
+         rerun: on-new-revision
+Build_Universal_Linux_OpenGLCore_Player_mono_apiNet2_Linear_trunk:
+    name: Build Universal on Linux_OpenGLCore_mono_apiNet2_Linear_Player on version trunk
+    agent:
+        type: Unity::VM
+        image: cds-ops/ubuntu-18.04-base:stable
+        flavor: b1.xlarge
+    variables:
+        UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
+    commands:
+      -  sudo -H pip install --upgrade pip
+      -  sudo -H pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
+      -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output TestProjects/UniversalGraphicsTest/utr
+      -  chmod +x TestProjects/UniversalGraphicsTest/utr
+      -  cd TestProjects/UniversalGraphicsTest && sudo unity-downloader-cli -u 37c5ec4c3cb13853f9074c74cbac49a232178bd8 -c editor -c il2cpp  --wait --published-only
+      -  cd TestProjects/UniversalGraphicsTest && DISPLAY=:0.0 ./utr --suite=playmode --platform=StandaloneLinux64 --testproject=. --extra-editor-arg="-playergraphicsapi=OpenGLCore" --editor-location=.Editor --artifacts_path=test-results --player-save-path=../../players --build-only --scripting-backend=Mono2x --extra-editor-arg="-colorspace=Linear" --extra-editor-arg="-executemethod" --timeout=1200 --extra-editor-arg="CustomBuild.BuildLinuxOpenGLCoreLinear"
+    artifacts:
+        logs:
+            paths:
+              -  "**/test-results/**"
+              -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+        players:
+            paths:
+              -  "players/**"
 Universal_Linux_OpenGLCore_playmode_il2cpp_apiNet4_Linear_CUSTOM-REVISION:
     name: Universal on Linux_OpenGLCore_playmode_il2cpp_apiNet4_Linear on version CUSTOM-REVISION
     agent:
@@ -131,6 +217,56 @@ Universal_Linux_OpenGLCore_editmode_il2cpp_apiNet4_Linear_CUSTOM-REVISION:
     dependencies:
       -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:linux
          rerun: always
+Universal_Linux_OpenGLCore_Standalone_XR_il2cpp_apiNet4_Linear_CUSTOM-REVISION:
+    name: Universal on Linux_OpenGLCore_Standalone_XR_il2cpp_apiNet4_Linear on version CUSTOM-REVISION
+    agent:
+        type: Unity::VM::GPU
+        image: cds-ops/ubuntu-18.04-base:stable
+        flavor: b1.large
+    variables:
+        UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
+        CUSTOM_REVISION: custom_revision_not_set
+    commands:
+      -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output TestProjects/UniversalGraphicsTest/utr
+      -  chmod +x TestProjects/UniversalGraphicsTest/utr
+      -  cd TestProjects/UniversalGraphicsTest && ./utr --suite=playmode --platform=StandaloneLinux64 --artifacts_path=test-results --player-load-path=../../players --player-connection-ip=auto --scripting-backend=IL2CPP --extra-editor-arg="-colorspace=Linear" --reruncount=2 --extra-editor-arg="-xr-reuse-tests" --timeout=1200
+    artifacts:
+        logs:
+            paths:
+              -  "**/test-results/**"
+              -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+    dependencies:
+      -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:linux
+         rerun: always
+      -  path: .yamato/universal-linux-openglcore.yml#Build_Universal_Linux_OpenGLCore_Player_il2cpp_apiNet4_Linear_CUSTOM-REVISION
+         rerun: always
+Build_Universal_Linux_OpenGLCore_Player_il2cpp_apiNet4_Linear_CUSTOM-REVISION:
+    name: Build Universal on Linux_OpenGLCore_il2cpp_apiNet4_Linear_Player on version CUSTOM-REVISION
+    agent:
+        type: Unity::VM
+        image: cds-ops/ubuntu-18.04-base:stable
+        flavor: b1.xlarge
+    variables:
+        UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
+        CUSTOM_REVISION: custom_revision_not_set
+    commands:
+      -  sudo -H pip install --upgrade pip
+      -  sudo -H pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
+      -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output TestProjects/UniversalGraphicsTest/utr
+      -  chmod +x TestProjects/UniversalGraphicsTest/utr
+      -  cd TestProjects/UniversalGraphicsTest && sudo unity-downloader-cli --source-file ../../unity_revision.txt -c editor -c il2cpp  --wait --published-only
+      -  cd TestProjects/UniversalGraphicsTest && DISPLAY=:0.0 ./utr --suite=playmode --platform=StandaloneLinux64 --testproject=. --extra-editor-arg="-playergraphicsapi=OpenGLCore" --editor-location=.Editor --artifacts_path=test-results --player-save-path=../../players --build-only --scripting-backend=IL2CPP --extra-editor-arg="-colorspace=Linear" --extra-editor-arg="-executemethod" --timeout=1200 --extra-editor-arg="CustomBuild.BuildLinuxOpenGLCoreLinear"
+    artifacts:
+        logs:
+            paths:
+              -  "**/test-results/**"
+              -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+        players:
+            paths:
+              -  "players/**"
+    dependencies:
+      -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:linux
+         rerun: always
 Universal_Linux_OpenGLCore_playmode_mono_apiNet2_Linear_CUSTOM-REVISION:
     name: Universal on Linux_OpenGLCore_playmode_mono_apiNet2_Linear on version CUSTOM-REVISION
     agent:
@@ -176,6 +312,56 @@ Universal_Linux_OpenGLCore_editmode_mono_apiNet2_Linear_CUSTOM-REVISION:
             paths:
               -  "**/test-results/**"
               -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+    dependencies:
+      -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:linux
+         rerun: always
+Universal_Linux_OpenGLCore_Standalone_XR_mono_apiNet2_Linear_CUSTOM-REVISION:
+    name: Universal on Linux_OpenGLCore_Standalone_XR_mono_apiNet2_Linear on version CUSTOM-REVISION
+    agent:
+        type: Unity::VM::GPU
+        image: cds-ops/ubuntu-18.04-base:stable
+        flavor: b1.large
+    variables:
+        UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
+        CUSTOM_REVISION: custom_revision_not_set
+    commands:
+      -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output TestProjects/UniversalGraphicsTest/utr
+      -  chmod +x TestProjects/UniversalGraphicsTest/utr
+      -  cd TestProjects/UniversalGraphicsTest && ./utr --suite=playmode --platform=StandaloneLinux64 --artifacts_path=test-results --player-load-path=../../players --player-connection-ip=auto --scripting-backend=Mono2x --extra-editor-arg="-colorspace=Linear" --reruncount=2 --extra-editor-arg="-xr-reuse-tests" --timeout=1200
+    artifacts:
+        logs:
+            paths:
+              -  "**/test-results/**"
+              -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+    dependencies:
+      -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:linux
+         rerun: always
+      -  path: .yamato/universal-linux-openglcore.yml#Build_Universal_Linux_OpenGLCore_Player_mono_apiNet2_Linear_CUSTOM-REVISION
+         rerun: always
+Build_Universal_Linux_OpenGLCore_Player_mono_apiNet2_Linear_CUSTOM-REVISION:
+    name: Build Universal on Linux_OpenGLCore_mono_apiNet2_Linear_Player on version CUSTOM-REVISION
+    agent:
+        type: Unity::VM
+        image: cds-ops/ubuntu-18.04-base:stable
+        flavor: b1.xlarge
+    variables:
+        UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
+        CUSTOM_REVISION: custom_revision_not_set
+    commands:
+      -  sudo -H pip install --upgrade pip
+      -  sudo -H pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
+      -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output TestProjects/UniversalGraphicsTest/utr
+      -  chmod +x TestProjects/UniversalGraphicsTest/utr
+      -  cd TestProjects/UniversalGraphicsTest && sudo unity-downloader-cli --source-file ../../unity_revision.txt -c editor -c il2cpp  --wait --published-only
+      -  cd TestProjects/UniversalGraphicsTest && DISPLAY=:0.0 ./utr --suite=playmode --platform=StandaloneLinux64 --testproject=. --extra-editor-arg="-playergraphicsapi=OpenGLCore" --editor-location=.Editor --artifacts_path=test-results --player-save-path=../../players --build-only --scripting-backend=Mono2x --extra-editor-arg="-colorspace=Linear" --extra-editor-arg="-executemethod" --timeout=1200 --extra-editor-arg="CustomBuild.BuildLinuxOpenGLCoreLinear"
+    artifacts:
+        logs:
+            paths:
+              -  "**/test-results/**"
+              -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+        players:
+            paths:
+              -  "players/**"
     dependencies:
       -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:linux
          rerun: always
