--- a/.yamato/universal-linux-vulkan.yml
+++ b/.yamato/universal-linux-vulkan.yml
@@ -86,6 +86,26 @@ Universal_Linux_Vulkan_editmode_il2cpp_apiNet4_Linear_trunk:
             paths:
               -  "**/test-results/**"
               -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+Universal_Linux_Vulkan_Standalone_XR_il2cpp_apiNet4_Linear_trunk:
+    name: Universal on Linux_Vulkan_Standalone_XR_il2cpp_apiNet4_Linear on version trunk
+    agent:
+        type: Unity::VM::GPU
+        image: cds-ops/ubuntu-18.04-base:stable
+        flavor: b1.large
+    variables:
+        UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
+    commands:
+      -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output TestProjects/UniversalGraphicsTest/utr
+      -  chmod +x TestProjects/UniversalGraphicsTest/utr
+      -  cd TestProjects/UniversalGraphicsTest && ./utr --suite=playmode --platform=StandaloneLinux64 --artifacts_path=test-results --player-load-path=../../players --player-connection-ip=auto --scripting-backend=IL2CPP --extra-editor-arg="-colorspace=Linear" --reruncount=2 --extra-editor-arg="-xr-reuse-tests" --timeout=1200
+    artifacts:
+        logs:
+            paths:
+              -  "**/test-results/**"
+              -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+    dependencies:
+      -  path: .yamato/universal-linux-vulkan.yml#Build_Universal_Linux_Vulkan_Player_il2cpp_apiNet4_Linear_trunk
+         rerun: on-new-revision
 Universal_Linux_Vulkan_Standalone_mono_apiNet2_Linear_trunk:
     name: Universal on Linux_Vulkan_Standalone_mono_apiNet2_Linear on version trunk
     agent:
@@ -169,6 +189,26 @@ Universal_Linux_Vulkan_editmode_mono_apiNet2_Linear_trunk:
             paths:
               -  "**/test-results/**"
               -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+Universal_Linux_Vulkan_Standalone_XR_mono_apiNet2_Linear_trunk:
+    name: Universal on Linux_Vulkan_Standalone_XR_mono_apiNet2_Linear on version trunk
+    agent:
+        type: Unity::VM::GPU
+        image: cds-ops/ubuntu-18.04-base:stable
+        flavor: b1.large
+    variables:
+        UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
+    commands:
+      -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output TestProjects/UniversalGraphicsTest/utr
+      -  chmod +x TestProjects/UniversalGraphicsTest/utr
+      -  cd TestProjects/UniversalGraphicsTest && ./utr --suite=playmode --platform=StandaloneLinux64 --artifacts_path=test-results --player-load-path=../../players --player-connection-ip=auto --scripting-backend=Mono2x --extra-editor-arg="-colorspace=Linear" --reruncount=2 --extra-editor-arg="-xr-reuse-tests" --timeout=1200
+    artifacts:
+        logs:
+            paths:
+              -  "**/test-results/**"
+              -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+    dependencies:
+      -  path: .yamato/universal-linux-vulkan.yml#Build_Universal_Linux_Vulkan_Player_mono_apiNet2_Linear_trunk
+         rerun: on-new-revision
 Universal_Linux_Vulkan_Standalone_il2cpp_apiNet4_Linear_CUSTOM-REVISION:
     name: Universal on Linux_Vulkan_Standalone_il2cpp_apiNet4_Linear on version CUSTOM-REVISION
     agent:
@@ -267,6 +307,29 @@ Universal_Linux_Vulkan_editmode_il2cpp_apiNet4_Linear_CUSTOM-REVISION:
     dependencies:
       -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:linux
          rerun: always
+Universal_Linux_Vulkan_Standalone_XR_il2cpp_apiNet4_Linear_CUSTOM-REVISION:
+    name: Universal on Linux_Vulkan_Standalone_XR_il2cpp_apiNet4_Linear on version CUSTOM-REVISION
+    agent:
+        type: Unity::VM::GPU
+        image: cds-ops/ubuntu-18.04-base:stable
+        flavor: b1.large
+    variables:
+        UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
+        CUSTOM_REVISION: custom_revision_not_set
+    commands:
+      -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output TestProjects/UniversalGraphicsTest/utr
+      -  chmod +x TestProjects/UniversalGraphicsTest/utr
+      -  cd TestProjects/UniversalGraphicsTest && ./utr --suite=playmode --platform=StandaloneLinux64 --artifacts_path=test-results --player-load-path=../../players --player-connection-ip=auto --scripting-backend=IL2CPP --extra-editor-arg="-colorspace=Linear" --reruncount=2 --extra-editor-arg="-xr-reuse-tests" --timeout=1200
+    artifacts:
+        logs:
+            paths:
+              -  "**/test-results/**"
+              -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+    dependencies:
+      -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:linux
+         rerun: always
+      -  path: .yamato/universal-linux-vulkan.yml#Build_Universal_Linux_Vulkan_Player_il2cpp_apiNet4_Linear_CUSTOM-REVISION
+         rerun: always
 Universal_Linux_Vulkan_Standalone_mono_apiNet2_Linear_CUSTOM-REVISION:
     name: Universal on Linux_Vulkan_Standalone_mono_apiNet2_Linear on version CUSTOM-REVISION
     agent:
@@ -364,4 +427,27 @@ Universal_Linux_Vulkan_editmode_mono_apiNet2_Linear_CUSTOM-REVISION:
               -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
     dependencies:
       -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:linux
+         rerun: always
+Universal_Linux_Vulkan_Standalone_XR_mono_apiNet2_Linear_CUSTOM-REVISION:
+    name: Universal on Linux_Vulkan_Standalone_XR_mono_apiNet2_Linear on version CUSTOM-REVISION
+    agent:
+        type: Unity::VM::GPU
+        image: cds-ops/ubuntu-18.04-base:stable
+        flavor: b1.large
+    variables:
+        UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
+        CUSTOM_REVISION: custom_revision_not_set
+    commands:
+      -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output TestProjects/UniversalGraphicsTest/utr
+      -  chmod +x TestProjects/UniversalGraphicsTest/utr
+      -  cd TestProjects/UniversalGraphicsTest && ./utr --suite=playmode --platform=StandaloneLinux64 --artifacts_path=test-results --player-load-path=../../players --player-connection-ip=auto --scripting-backend=Mono2x --extra-editor-arg="-colorspace=Linear" --reruncount=2 --extra-editor-arg="-xr-reuse-tests" --timeout=1200
+    artifacts:
+        logs:
+            paths:
+              -  "**/test-results/**"
+              -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+    dependencies:
+      -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:linux
+         rerun: always
+      -  path: .yamato/universal-linux-vulkan.yml#Build_Universal_Linux_Vulkan_Player_mono_apiNet2_Linear_CUSTOM-REVISION
          rerun: always
