--- a/.yamato/universal-osx-openglcore.yml
+++ b/.yamato/universal-osx-openglcore.yml
@@ -41,6 +41,25 @@ Universal_OSX_OpenGLCore_editmode_il2cpp_apiNet4_Linear_trunk:
             paths:
               -  "**/test-results/**"
               -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+Universal_OSX_OpenGLCore_Standalone_XR_il2cpp_apiNet4_Linear_trunk:
+    name: Universal on OSX_OpenGLCore_Standalone_XR_il2cpp_apiNet4_Linear on version trunk
+    agent:
+        type: Unity::VM::osx
+        image: package-ci/mac:stable
+        flavor: m1.mac
+    variables:
+        UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
+    commands:
+      -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output TestProjects/UniversalGraphicsTest/utr
+      -  chmod +x TestProjects/UniversalGraphicsTest/utr
+      -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
+      -  cd TestProjects/UniversalGraphicsTest && unity-downloader-cli -u 37c5ec4c3cb13853f9074c74cbac49a232178bd8 -c editor -c il2cpp  --wait --published-only
+      -  cd TestProjects/UniversalGraphicsTest && ./utr --suite=playmode --platform=StandaloneOSX --artifacts_path=test-results --testproject=. --editor-location=.Editor --scripting-backend=IL2CPP --extra-editor-arg="-colorspace=Linear" --reruncount=2 --extra-editor-arg="-xr-reuse-tests"
+    artifacts:
+        logs:
+            paths:
+              -  "**/test-results/**"
+              -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
 Universal_OSX_OpenGLCore_playmode_mono_apiNet2_Linear_trunk:
     name: Universal on OSX_OpenGLCore_playmode_mono_apiNet2_Linear on version trunk
     agent:
@@ -74,6 +93,25 @@ Universal_OSX_OpenGLCore_editmode_mono_apiNet2_Linear_trunk:
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  cd TestProjects/UniversalGraphicsTest && unity-downloader-cli -u 37c5ec4c3cb13853f9074c74cbac49a232178bd8 -c editor -c il2cpp  --wait --published-only
       -  cd TestProjects/UniversalGraphicsTest && ./utr --suite=editor --platform=editmode --testproject=. --editor-location=.Editor --artifacts_path=test-results --scripting-backend=Mono2x --extra-editor-arg="-colorspace=Linear" --reruncount=2
+    artifacts:
+        logs:
+            paths:
+              -  "**/test-results/**"
+              -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+Universal_OSX_OpenGLCore_Standalone_XR_mono_apiNet2_Linear_trunk:
+    name: Universal on OSX_OpenGLCore_Standalone_XR_mono_apiNet2_Linear on version trunk
+    agent:
+        type: Unity::VM::osx
+        image: package-ci/mac:stable
+        flavor: m1.mac
+    variables:
+        UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
+    commands:
+      -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output TestProjects/UniversalGraphicsTest/utr
+      -  chmod +x TestProjects/UniversalGraphicsTest/utr
+      -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
+      -  cd TestProjects/UniversalGraphicsTest && unity-downloader-cli -u 37c5ec4c3cb13853f9074c74cbac49a232178bd8 -c editor -c il2cpp  --wait --published-only
+      -  cd TestProjects/UniversalGraphicsTest && ./utr --suite=playmode --platform=StandaloneOSX --artifacts_path=test-results --testproject=. --editor-location=.Editor --scripting-backend=Mono2x --extra-editor-arg="-colorspace=Linear" --reruncount=2 --extra-editor-arg="-xr-reuse-tests"
     artifacts:
         logs:
             paths:
@@ -125,6 +163,29 @@ Universal_OSX_OpenGLCore_editmode_il2cpp_apiNet4_Linear_CUSTOM-REVISION:
     dependencies:
       -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:macos
          rerun: always
+Universal_OSX_OpenGLCore_Standalone_XR_il2cpp_apiNet4_Linear_CUSTOM-REVISION:
+    name: Universal on OSX_OpenGLCore_Standalone_XR_il2cpp_apiNet4_Linear on version CUSTOM-REVISION
+    agent:
+        type: Unity::VM::osx
+        image: package-ci/mac:stable
+        flavor: m1.mac
+    variables:
+        UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
+        CUSTOM_REVISION: custom_revision_not_set
+    commands:
+      -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output TestProjects/UniversalGraphicsTest/utr
+      -  chmod +x TestProjects/UniversalGraphicsTest/utr
+      -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
+      -  cd TestProjects/UniversalGraphicsTest && unity-downloader-cli --source-file ../../unity_revision.txt -c editor -c il2cpp  --wait --published-only
+      -  cd TestProjects/UniversalGraphicsTest && ./utr --suite=playmode --platform=StandaloneOSX --artifacts_path=test-results --testproject=. --editor-location=.Editor --scripting-backend=IL2CPP --extra-editor-arg="-colorspace=Linear" --reruncount=2 --extra-editor-arg="-xr-reuse-tests"
+    artifacts:
+        logs:
+            paths:
+              -  "**/test-results/**"
+              -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+    dependencies:
+      -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:macos
+         rerun: always
 Universal_OSX_OpenGLCore_playmode_mono_apiNet2_Linear_CUSTOM-REVISION:
     name: Universal on OSX_OpenGLCore_playmode_mono_apiNet2_Linear on version CUSTOM-REVISION
     agent:
@@ -163,6 +224,29 @@ Universal_OSX_OpenGLCore_editmode_mono_apiNet2_Linear_CUSTOM-REVISION:
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  cd TestProjects/UniversalGraphicsTest && unity-downloader-cli --source-file ../../unity_revision.txt -c editor -c il2cpp  --wait --published-only
       -  cd TestProjects/UniversalGraphicsTest && ./utr --suite=editor --platform=editmode --testproject=. --editor-location=.Editor --artifacts_path=test-results --scripting-backend=Mono2x --extra-editor-arg="-colorspace=Linear" --reruncount=2
+    artifacts:
+        logs:
+            paths:
+              -  "**/test-results/**"
+              -  "TestProjects/UniversalGraphicsTest/Logs/*.log"
+    dependencies:
+      -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:macos
+         rerun: always
+Universal_OSX_OpenGLCore_Standalone_XR_mono_apiNet2_Linear_CUSTOM-REVISION:
+    name: Universal on OSX_OpenGLCore_Standalone_XR_mono_apiNet2_Linear on version CUSTOM-REVISION
+    agent:
+        type: Unity::VM::osx
+        image: package-ci/mac:stable
+        flavor: m1.mac
+    variables:
+        UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
+        CUSTOM_REVISION: custom_revision_not_set
+    commands:
+      -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output TestProjects/UniversalGraphicsTest/utr
+      -  chmod +x TestProjects/UniversalGraphicsTest/utr
+      -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
+      -  cd TestProjects/UniversalGraphicsTest && unity-downloader-cli --source-file ../../unity_revision.txt -c editor -c il2cpp  --wait --published-only
+      -  cd TestProjects/UniversalGraphicsTest && ./utr --suite=playmode --platform=StandaloneOSX --artifacts_path=test-results --testproject=. --editor-location=.Editor --scripting-backend=Mono2x --extra-editor-arg="-colorspace=Linear" --reruncount=2 --extra-editor-arg="-xr-reuse-tests"
     artifacts:
         logs:
             paths:
